--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -12,6 +12,13 @@ body {
     height: 100vh;
     padding: 1rem;
     background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+h1
+{
+    padding: 30px;
 }
 
 @media screen and (min-width: 992px) {
