--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,9 +1,11 @@
-.pokemons {
+.pokemons 
+{
     display: grid;
     grid-template-columns: 1fr;
     margin: 0;
     padding: 0;
     list-style: none;
+    max-width: 200px;
 }
 
 .normal {
@@ -96,6 +98,7 @@
 .pokemon .name {
     text-transform: capitalize;
     color: #fff;
+    font-size: 1.1rem;
     margin-bottom: .25rem;
 }
 
@@ -110,13 +113,14 @@
     padding: 0;
     margin: 0;
     list-style: none;
+    align-self: flex-start;
 }
 
 .pokemon .detail .types .type {
-    color: #fff;
+    color: #f1f1f1;
     padding: .25rem .5rem;
     margin: .25rem 0;
-    font-size: .625rem;
+    font-size: .725rem;
     border-radius: 1rem;
     filter: brightness(1.1);
     text-align: center;
@@ -139,27 +143,35 @@
 .pagination button {
     padding: .25rem .5rem;
     margin: .25rem 0;
-    font-size: .625rem;
+    font-size: 1rem;
     color: #fff;
     background-color: #6c79db;
     border: none;
     border-radius: 1rem;
+    cursor: pointer;
+    text-align: center;
+    justify-content: center;
+    height: 40px;
+    width: 150px;
 }
 
 @media screen and (min-width: 380px) {
     .pokemons {
         grid-template-columns: 1fr 1fr;
+        max-width: 400px;
     }
 }
 
 @media screen and (min-width: 576px) {
     .pokemons {
         grid-template-columns: 1fr 1fr 1fr;
+        max-width: 600px;
     }
 }
 
 @media screen and (min-width: 992px) {
     .pokemons {
         grid-template-columns: 1fr 1fr 1fr 1fr;
+        max-width: 800px;
     }
 }
