--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -84,7 +84,7 @@
     display: flex;
     flex-direction: column;
     margin: .5rem;
-    padding: 1rem;
+    padding: 1rem 1rem 0.125rem 1rem;
     border-radius: 1rem;
 }
 
@@ -153,6 +153,29 @@
     justify-content: center;
     height: 40px;
     width: 150px;
+}
+
+.btn-stats
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+}
+.btn-stats button
+{
+    padding: .25rem .5rem;
+    margin: .25rem 0;
+    font-size: 0.750rem;
+    color: #fff;
+    background-color: #6c79db;
+    border: none;
+    border-radius: 1rem;
+    cursor: pointer;
+    text-align: center;
+    justify-content: center;
+    height: 25px;
+    width: 90px;
 }
 
 @media screen and (min-width: 380px) {
